AUTOMAKE_OPTIONS = foreign

SUBDIRS = Data Math 3D IO Physics Sound Game 2D AI GL

bin_PROGRAMS = Alienation

Alienation_SOURCES = config.h Alienation.cpp

Alienation_LDADD = GL/libAlienationGL.a AI/libAlienationAI.a Game/libAlienationGame.a 2D/libAlienation2D.a Sound/libAlienationSound.a Physics/libAlienationPhysics.a IO/libAlienationIO.a 3D/libAlienation3D.a Math/libAlienationMath.a
