AUTOMAKE_OPTIONS = foreign

lib_LTLIBRARIES = libAlienationGUI.la

noinst_HEADERS = Button.h CheckBox.h Frame.h GUI.h List.h ListItem.h ListSubItem.h RadioButton.h RadioContainer.h

libAlienationGUI_la_SOURCES = Button.cpp CheckBox.cpp Frame.cpp GUI.cpp List.cpp ListItem.cpp ListSubItem.cpp RadioButton.cpp RadioContainer.cpp

INCLUDES = -I@top_srcdir@
