AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libAlienation3D.a

libAlienation3D_a_SOURCES = Material.cpp Material.h Mesh.cpp Mesh.h Model.cpp Model.h Light.cpp Light.h ParticleEngine.cpp ParticleEngine.h Particle.cpp Particle.h Texture.cpp Texture.h Frustum.cpp Frustum.h BoundingSphere.cpp BoundingSphere.h TextureManager.cpp TextureManager.h Sprite.cpp Sprite.h 3DObject.h FMesh.cpp FMesh.h HalfEdge.h HEMesh.cpp HEMesh.h

INCLUDES = -I@top_srcdir@
