AUTOMAKE_OPTIONS = foreign

lib_LTLIBRARIES = libAlienation3D.la

noinst_HEADERS = Material.h Mesh.h Model.h Light.h ParticleEngine.h Particle.h Texture.h Frustum.h BoundingSphere.h TextureManager.h Sprite.h 3DObject.h FMesh.h HalfEdge.h HEMesh.h WEMesh.h WingedEdge.h

libAlienation3D_la_SOURCES = Material.cpp Mesh.cpp Model.cpp Light.cpp ParticleEngine.cpp Particle.cpp Texture.cpp Frustum.cpp BoundingSphere.cpp TextureManager.cpp Sprite.cpp FMesh.cpp HEMesh.cpp WEMesh.cpp

INCLUDES = -I@top_srcdir@
