AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libAlienationEquipment.a

libAlienationEquipment_a_SOURCES = Equipment.cpp Equipment.h HudInformation.cpp HudInformation.h Radar.cpp Radar.h Shield.cpp Shield.h SpeedIndicator.cpp SpeedIndicator.h TargetInformation.cpp TargetInformation.h ThrustInformation.cpp ThrustInformation.h


INCLUDES = -I@top_srcdir@
