AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = libAlienationEquipment.la

noinst_HEADERS = Engine.h Equipment.h HudInformation.h Radar.h Shield.h SpeedIndicator.h TargetingComputer.h ThrustInformation.h Trail.h 

libAlienationEquipment_la_SOURCES = Engine.cpp Equipment.cpp HudInformation.cpp Radar.cpp Shield.cpp SpeedIndicator.cpp TargetingComputer.cpp ThrustInformation.cpp Trail.cpp 


INCLUDES = -I@top_srcdir@
