AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libAlienationGUI.a

libAlienationGUI_a_SOURCES = Button.cpp Button.h CheckBox.cpp CheckBox.h Frame.cpp Frame.h GUI.cpp GUI.h List.cpp List.h ListItem.cpp ListItem.h ListSubItem.cpp ListSubItem.h RadioButton.cpp RadioButton.h RadioContainer.cpp RadioContainer.h


INCLUDES = -I@top_srcdir@
