AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libAlienationGame.a

libAlienationGame_a_SOURCES = Asteroid.h Asteroid.cpp Brake.h Brake.cpp GameObject.h GameObject.cpp PlayerShip.h PlayerShip.cpp Ship.h Ship.cpp Stars.h Stars.cpp Trail.h Trail.cpp Weapon.h Weapon.cpp ShipFactory.cpp ShipFactory.h WeaponFactory.cpp WeaponFactory.h Hud.cpp Hud.h

INCLUDES = -I@top_srcdir@
