AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = libAlienationGame.la

noinst_HEADERS = Asteroid.h Brake.h GameObject.h PlayerShip.h Ship.h Stars.h Weapon.h ShipFactory.h WeaponFactory.h

libAlienationGame_la_SOURCES = Asteroid.cpp Brake.cpp GameObject.cpp PlayerShip.cpp Ship.cpp Stars.cpp Weapon.cpp ShipFactory.cpp WeaponFactory.cpp

INCLUDES = -I@top_srcdir@
