SUBDIRS = Hud

EXTRA_DIST = amethyst.jpg amethyst.png an01.png an02.png an03.png ball.png benedeti.jpg blueDOT3.png bluepan1.png canopy01.png fighter1DOT3.png fighter1.png fighter2DOT3.png flare.png goldmarb.jpg loadscreen.png smoke.png star.png sun.png text.png whtgran.jpg

texturedir = $(datadir)/Alienation/Data/Texture

texture_DATA = amethyst.jpg amethyst.png an01.png an02.png an03.png ball.png benedeti.jpg blueDOT3.png bluepan1.png canopy01.png fighter1DOT3.png fighter1.png fighter2DOT3.png flare.png goldmarb.jpg loadscreen.png smoke.png star.png sun.png text.png whtgran.jpg


